--- a/SnakeXaml.csproj
+++ b/SnakeXaml.csproj
@@ -73,9 +73,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Arena.cs" />
+    <Compile Include="Model\ArenaCanvas.cs" />
     <Compile Include="Model\ArenaGrid.cs" />
     <Compile Include="Model\ArenaOld.cs" />
     <Compile Include="Model\ArenaPosition.cs" />
+    <Compile Include="Model\CanvasPosition.cs" />
     <Compile Include="Model\Foods.cs" />
     <Compile Include="Model\Snake.cs" />
     <Compile Include="Model\SnakeHeadDirectionEnum.cs" />
